tests/ui/include-macros/mismatched-types.stderr
error[E0308]: mismatched types
  --> $DIR/file.txt:0:1
   |
   |
  ::: $DIR/mismatched-types.rs:2:12
   |
LL |     let b: &[u8] = include_str!("file.txt");
   |            -----   ------------------------ in this macro invocation
   |            |
   |            expected due to this
   |
   = note: expected reference `&[u8]`
              found reference `&'static str`

error[E0308]: mismatched types
  --> $DIR/mismatched-types.rs:3:19
   |
LL |     let s: &str = include_bytes!("file.txt");
   |            ----   ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `&[u8; 0]`
   |            |
   |            expected due to this
   |
   = note: expected reference `&str`
              found reference `&'static [u8; 0]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
